// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard - JobTitleLink should bold keyword 1`] = `
<Link
  className="jobTitleLink"
  link="/jobCard"
  rel="noopener noreferrer"
>
  <Text
    baseline={true}
    className="jobTitle"
    strong={true}
    waving={true}
  >
    Software Engineer
  </Text>
</Link>
`;

exports[`JobCard - JobTitleLink should pass through viewed prop 1`] = `
<Link
  className="jobTitleLinkVisited"
  link="/jobCard"
  rel="noopener noreferrer"
  viewed={true}
>
  <Text
    baseline={true}
    className="jobTitle"
    strong={true}
    waving={true}
  >
    Software Engineer
  </Text>
</Link>
`;

exports[`JobCard - JobTitleLink should render LinkComponent when it is provided 1`] = `
<LinkComponent
  className="jobTitleLink"
  link="/jobCard"
  rel="noopener noreferrer"
>
  <Text
    baseline={true}
    className="jobTitle"
    strong={true}
    waving={true}
  >
    Software Engineer
  </Text>
</LinkComponent>
`;

exports[`JobCard - JobTitleLink should render correctly 1`] = `
<Link
  className="jobTitleLink"
  link="/jobCard"
  rel="noopener noreferrer"
>
  <Text
    baseline={true}
    className="jobTitle"
    strong={true}
    waving={true}
  >
    Software Engineer
  </Text>
</Link>
`;
